--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <body id="app">
         <header :class="{ dark: store.dark }">
             <div class="logo">
-                <h2>Sample List</h2>
+                <h2>Sams Level List</h2>
                 <p>v1.0.0</p>
             </div>
             <nav class="nav">
@@ -61,13 +61,13 @@
                         />
                     </button>
                     <!-- Replace the '#' with your discord server's invite-->
-                    <a class="nav__icon" href="#">
+                    <a class="nav__icon" href="ee8gRxwPTa">
                         <img src="/assets/discord.svg" alt="Discord Logo" />
                     </a>
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href="#"
+                        href="https://forms.gle/SS8JerQgcZke6Lqe9"
                         target="_blank"
                         >Submit Record</a
                     >
